--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@ mathjax: ture
                     <div class="label-card">
                     {% include category.html %}
                     </div>
-
-                    <div class="label-card">
-                    {% include tag.html %}
-                    </div>
+                    
+                    
                 </div>
                 <div class="excerpt">
                     {{post.excerpt}}
@@ -101,7 +99,7 @@ mathjax: ture
                 </ul>
             </div>
             <!-- 其他div框放到这里 -->
-            <div class="side">
+            <!-- <div class="side">
                 <div>
                     <i class="fa fa-tags"></i>
                     Tags
@@ -143,7 +141,7 @@ mathjax: ture
                       <a href="{{ root_url }}/{{ site.tag_dir }}#{{ tag[0] }}" style="font-size: {{ size }}pt; color: #{{ color }}{{ color }}{{ color }};">{{ tag[0] }}</a>
                     {% endfor %}
                 </div>
-            </div>
+            </div> -->
 
             <!-- <div class="side">
                 <div>
